--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,38 @@
 /* CSS Here pls */
+
+html{
+scroll-behavior: smooth;
+}
+
+/* Navbar */
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: rgb(5, 5, 5);
+}
+
+.topnav a {
+    float: left;
+    color: #070606;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color:rgb(236, 119, 10);
+    color: black;
+}
+
+.topnav a.active {
+    background-color: rgb(236, 119, 10);
+    color: black;
+}
+
+
+
