--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,28 @@ section#trick-or-treat div .treat{
 }
 
 /* End of Trick or Treat */
+/*Contact Page CSS*/
+.card {
+  /* Add shadows to create the "card" effect */
+  margin: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 300px;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+.contacts
+{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
