--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ footer {
     font-style: normal;
     font-weight: normal;
     letter-spacing: -0.035em;
-    text-transform: uppercase;
+    text-transform: uppercase;ssssssssssss
     /* Gray 1 */
     color: #333333;
   }
@@ -128,7 +128,7 @@ scroll-behavior: smooth;
 /* Navbar */
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Space Mono", monospace;
 }
 
 .topnav {
@@ -151,7 +151,7 @@ body {
 }
 
 .topnav a.active {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(236, 119, 10);
     color: rgb(255, 255, 255);
 }
 
