--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ footer {
     font-style: normal;
     font-weight: normal;
     letter-spacing: -0.035em;
-    text-transform: uppercase;ssssssssssss
+    text-transform: uppercase;
     /* Gray 1 */
     color: #333333;
   }
