--- a/style.css
+++ b/style.css
@@ -28,8 +28,31 @@ html {
   
   /* On mouse-over, add a deeper shadow */
   .card:hover {
-    /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); */
-    transform: scale(1.1);
+    transform: scale(1.05);
+  }
+
+  .card img{
+    width: 200px; 
+    height: 200px; 
+    margin: 20px auto 10px auto; 
+    border-radius: 100%;
+    border: 1px solid #000;
+  }
+
+  .container a{
+    text-decoration: none;
+    color: #000;
+    display: block;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    transition: all .2s ease-in-out;
+  }
+
+  .container a:hover{
+    background-color: #000;
+    color: orange;
   }
   
   /* Add some padding inside the card container */
