What: Fixing an issue where styles where applied to a class of footer but the footer item had an id instead of a class

--- a/styles.css
+++ b/styles.css
@@ -340,7 +340,7 @@ section#trick-or-treat div .dftreat {
   flex-wrap: wrap;
 }
 
-.footer {
+#footer {
   margin: auto;
   width: 100%;
   padding: 40px;
