--- a/styles.css
+++ b/styles.css
@@ -433,6 +433,40 @@ section#trick-or-treat div .dftreat {
   flex-wrap: wrap;
 }
 
+@keyframes glow {
+  from {
+    text-shadow: 0 0 2px #ffffff, 0 0 2px #fff205, 0 0 4px #149330,
+      0 0 6px #149330;
+  }
+  to {
+    text-shadow: 0 0 8px #ffffff, 0 0 12px #fff205, 0 0 16px #149330,
+      0 0 18px #149330;
+  }
+}
+
+#do-not-scroll-further {
+  width: 100%;
+  color: white;
+  padding: 15px 0;
+}
+.glow {
+  animation: glow 1.5s ease-in-out infinite alternate;
+  font-size: 200px;
+  padding-left: 20px;
+  transition: transform 0.4s ease;
+}
+.glow:hover {
+  transform: rotate(-180deg);
+}
+.do-not-scroll-further-heading {
+  text-align: center;
+}
+.scary-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #footer {
   margin: auto;
   width: 100%;
