--- a/styles.css
+++ b/styles.css
@@ -489,19 +489,19 @@ section#trick-or-treat div #game {
 }
 
 section#trick-or-treat div .start {
-  background-image: url('./Images/trick-or-treat.png');
+  background-image: url(Images/trick-or-treat.png);
 }
 
 section#trick-or-treat div .trick {
-  background-image: url('./Images/trick.png');
+  background-image: url(Images/trick-updated.png);
 }
 
 section#trick-or-treat div .treat {
-  background-image: url('./Images/treat.png');
+  background-image: url(Images/treat-updated.png);
 }
 
 section#trick-or-treat div .dftrick {
-  background-image: url('./Images/dftrick.png');
+  background-image: url(Images/dftrick.png);
 }
 
 /* End of Trick or Treat */
